# GingerLib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.cgr
src/: channelgroups.rs  channels.rs  errors.rs  lib.rs  parser.rs
