[package]
name = "gingerlib"
authors = ["m1nt_ (Rubber Duck Shobe)"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library to read and write Quest3D channel group files."
repository = "https://github.com/AudiosurfResearch/GingerLib/"
keywords = ["audiosurf", "quest3d", "cgr", "q3d", "modding"]
categories = ["parser-implementations", "encoding"]

[dependencies]
flate2 = "1.0.28"
nom = "7.1.3"
test-log = { version = "0.2.14", features = ["trace"] }
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.6.1"
